Uploading the files of seduire into github

--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
-<?php
-// Members: 
+<!-- // 
+Members: 
 // De Jesus, Franz Mark
 // Gonzales, John Patrick
 // Guaio, Karl
 // Jeerh, Satwinder 
 // Section: WD-202
 
-// Session start here
-session_start();
-$conn = new mysqli("localhost", "root", "", "ShoppingDB1");
-
-if (isset($_POST['logout'])) {
-    session_destroy();
-    header("Location: login.php"); 
-    exit();
-}
-?>
+// Session start here -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -36,12 +27,12 @@ if (isset($_POST['logout'])) {
 <body>
 <!-- For our header where all the navs and search engine are located -->
     <header class="head">
-        <a href="index.php"><h1>S É D U I R E</h1></a>
+        <a href="index.html"><h1>S É D U I R E</h1></a>
         <div class="hamburger" onclick="toggleMenu()">
             <i class="ri-menu-line"></i>
         </div>
         <nav id="mobile-menu" class="hidden">
-            <a href="index.php" id="nav1">HOME</a>
+            <a href="index.html" id="nav1">HOME</a>
             <a href="About Us.php" id="nav2">ABOUT</a>
             <a href="Contact.php" id="nav3">CONTACT</a>
             <a href="cart.php" id="nav4">CART</a>
